common-applications/om/chat-api/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: chat-api
  name: chat-api
