common-applications/om/chat-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api
  namespace: chat-api
  labels:
    app: chat-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chat-api
  template:
    metadata:
      labels:
        app: chat-api
    spec:
      containers:
        - name: chat-api
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/chatapi/easymodel:0.0.11
          resources:
            limits:
              cpu: 2000m
              memory: 16000Mi
              nvidia.com/gpu: 1
            requests:
              cpu: 1000m
              memory: 2000Mi
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /var/lib/om/model/chatglm-6b
              name: chat-api-model-volume
            - mountPath: /var/lib/om/config.ini
              subPath: credentials_cfg
              name: chat-api-secrets-volume
      nodeSelector:
        accelerator: nvidia-t4
      volumes:
        - name: chat-api-model-volume
          persistentVolumeClaim:
            claimName: chat-api-model
        - name: chat-api-secrets-volume
          secret:
            secretName: chat-api-secrets
