common-applications/om/chat-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
  namespace: chat-api
spec:
  ports:
    - name: srv
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: chat-api
  type: ClusterIP
